[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/circle-blood.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BloodParticles.gd" type="Script" id=2]

[node name="BloodParticles" type="CPUParticles2D"]
amount = 32
lifetime = 0.4
explosiveness = 1.0
texture = ExtResource( 1 )
gravity = Vector2( 0, 0 )
initial_velocity = 150.0
initial_velocity_random = 1.0
scale_amount = 0.2
scale_amount_random = 0.5
hue_variation = -0.1
hue_variation_random = 0.79
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
